--- a/C:C++/따배씨/14_구조체1.md
+++ b/C:C++/따배씨/14_구조체1.md
@@ -1,6 +1,6 @@
 # 따배씨 - 따라하며 배우는 C언어
 
-### 14강 구조체
+### 14강 구조체_1
 
 14.1 구조체 Structures 가 필요한 이유
 
@@ -957,3 +957,343 @@ char* s_gets(char* st, int n)
 
 ##### 14.9 구조체와 할당 메모리
 
+```c
+#include <stdio.h>
+#include <string.h> // strlen(), strcmp()
+
+#define SLEN 81
+
+struct namect
+{
+    char* fname;    // Use malloc()
+    char* lname;    // Use malloc()
+    int letters;
+};
+
+
+int main()
+{
+    struct namect p = {"Jeong-Mo", "Hong"};
+    printf("%s %s\n", p.fname, p.lname);
+  
+    /*
+        Dangerous usage
+     */
+
+    int f1 = scanf("%[^\n]%*c", p.lname);
+    printf("%s %s\n", p.lname, p.fname);
+	
+		return 0;
+}
+```
+
+* ```c
+  struct namect p = {"Jeong-Mo", "Hong"};
+  ```
+
+  * 포인터로 선언되었기 때문에, 문자열의 첫 주소가 저장됨
+
+    * 문자열은 read only 인 text segment 메모리에 존재 하고, 문자열의 첫 주소값이 p.fname 과 p.lname 에 저장
+
+  * ```c
+    int f1 = scanf("%[^\n]%*c", p.lname);
+    ```
+
+    * text segement 저장되어 있는 값을 수정하려고 할 시, EXC_BAD_ACCES Error 발생
+
+
+
+```c
+#include <stdio.h>
+#include <string.h> // strlen(), strcmp()
+#include <stdlib.h> // malloc(), free()
+
+#define SLEN 81
+
+struct namect
+{
+    char* fname;    // Use malloc()
+    char* lname;    // Use malloc()
+    int letters;
+};
+
+int main()
+{
+	  struct namect p = {"Jeong-Mo", "Hong"};
+    printf("%s %s\n", p.fname, p.lname);
+  
+    /*
+        Recommended usage
+     */
+    
+    char buffer[SLEN] = {0, };
+    // 입력 값 임시 저장소
+    
+    int f2 = scanf("%[^\n]%*c", buffer);
+    // 입력 받아서, buffer 에 저장
+    
+    p.fname = (char*)malloc(strlen(buffer) + 1);
+    // 입력 받은 문자열을 저장할 공간을 동적 할당 받음
+    
+    if (p.fname != NULL)
+        strcpy(p.fname, buffer);
+        // buffer 에 내용을 p.fname 에 복사
+        // p.fname = buffer 으로 입력 시, 주소값이 전달 됨
+    
+    printf("%s %s\n", p.fname, p.lname);
+```
+
+* ```c
+  char buffer[SLEN] = {0, };
+  int f2 = scanf("%[^\n]%*c", buffer);
+  ```
+
+  * buffer : 입력 값 임시 저장소
+
+* ```c
+  p.fname = (char*)malloc(strlen(buffer) + 1);
+  ```
+
+  * 새롭게 입력받은 문자열을 저장하는 공간을 동적 할당 받음
+
+* ```c
+  strcpy(p.fname, buffer);
+  ```
+
+  * buffer 로 입력받은 문자열을 p.fname 에 복사
+
+    * ```c
+      p.fname = buffer;
+      ```
+
+      * 주소값이 전달 되므로, strcpy() 를 사용하여 문자열 내용을 복사
+
+
+
+```c
+#include <stdio.h>
+#include <string.h> // strlen(), strcmp()
+#include <stdlib.h> // malloc(), free()
+
+#define SLEN 81
+
+struct namect
+{
+    char* fname;    // Use malloc()
+    char* lname;    // Use malloc()
+    int letters;
+};
+
+void getinfo(struct namect*);           // allocate memory
+void makeinfo(struct namect*);
+void showinfo(const struct namect*);
+void cleanup(struct namect*);           // free memory when done
+char* s_gets(char* st, int n);
+
+int main()
+{
+    struct namect person;
+    
+    getinfo(&person);
+    makeinfo(&person);
+    showinfo(&person);
+    cleanup(&person);
+    
+    return 0;
+}
+
+
+void getinfo(struct namect* pst)
+{
+    int flag;
+    char temp[SLEN] = {0, };
+    
+    printf("Please enter your first name.\n");
+    
+    flag = scanf("%[^\n]%*c", temp);
+    if (flag != 1)
+        printf("Wrong input");
+    else
+    {
+        pst->fname = (char*)malloc(strlen(temp)+1); // + 1 is for '\0'
+        if (pst->fname != NULL)
+            strcpy(pst->fname, temp);
+        else
+            printf("Malloc() failed");
+    }
+    
+    printf("Please enter your last name.\n");
+    
+    flag = scanf("%[^\n]%*c", temp);
+    if (flag != 1)
+        printf("Wrong input");
+    else
+    {
+        pst->lname = (char*)malloc(strlen(temp)+1); // + 1 is for '\0'
+        if (pst->lname != NULL)
+            strcpy(pst->lname, temp);
+        else
+            printf("Malloc() failed");
+    }
+}
+
+void cleanup(struct namect* pst)
+{
+    free(pst->fname);
+    free(pst->lname);
+}
+
+void makeinfo(struct namect* pst)
+{
+    pst->letters = (int)(strlen(pst->fname) + strlen(pst->lname));
+}
+
+void showinfo(const struct namect* pst)
+{
+    printf("%s %s, your name contains %d letters.\n", pst->fname, pst->lname, pst->letters);
+}
+
+char* s_gets(char* st, int n)
+{
+    char* ret_val;
+    char* find;
+    
+    ret_val = fgets(st, n, stdin);
+    if (ret_val)
+    {
+        find = strchr(st, '\n');
+        if (find)
+            * find = '\0';
+        else
+            while (getchar() != '\n')
+                continue;
+    }
+    
+    return ret_val;
+}
+```
+
+
+
+##### 14.10 복합 리터럴 Compound Literals
+
+```c
+#include <stdio.h>
+#include <string.h>
+
+#define MAXTITL 41
+#define MAXAUTL 31
+
+struct book
+
+{
+    char title[MAXTITL];
+    char author[MAXAUTL];
+    //char* title;          // Not recommended
+    //char* author;         // Not recommended
+    float price;
+};
+
+struct rectangle {
+    double width;
+    double height;
+};
+
+double rect_area(struct rectangle r)
+{
+    return r.width * r.height;
+}
+
+double rect_area_ptr(struct rectangle * r)
+{
+    return r->width * r->height;
+}
+
+int main()
+{
+    struct book book_to_read = {"Crime and Punishment", "Fyodor Dostoyevsky", 11.25f};
+    
+    /*
+        Compound literals
+        - Temporary structure values
+     */
+    
+    strcpy(book_to_read.title, "Alice in wonderland");
+    strcpy(book_to_read.author, "Lewis Carroll");
+    book_to_read.price = 20.3f;
+    
+    struct book book2 = {"Alice in Wonderland", "Lewis Carroll", 20.3f};
+    book_to_read = book2;
+    
+    
+    book_to_read = (struct book){"Alice in Wonderland", "Lewis Carroll", 20.3f};
+    
+    printf("%s %s\n", book_to_read.title, book_to_read.author);
+    
+    struct rectangle rec1 = { 1.0, 2.0 };
+    double area = rect_area(rec1);
+  
+    area = rect_area((struct rectangle) {1.0, 2.0});
+    
+    area  = rect_area_ptr(&(struct rectangle) {.height = 3.0, .width = 2.0});
+    // Designated initializers
+    printf("%f\n", area);
+    
+    return 0;
+}
+```
+
+* ```c
+  struct book book_to_read = {"Crime and Punishment", "Fyodor Dostoyevsky", 11.25f};
+  
+  //book_to_read = {"Alice in Wonderland", "Lewis Carroll", 20.3f};	//Error
+  ```
+
+  * 한번 초기화된 후에는 선언과 같은 방법으로 구조체 값을 변경하지 못함
+
+* 구조체 값 변경 방법
+
+  * member 를 직접 변경
+
+    ```c
+    strcpy(book_to_read.title, "Alice in wonderland");
+    strcpy(book_to_read.author, "Lewis Carroll");
+    book_to_read.price = 20.3f;
+    ```
+
+  * 새로운 구조체를 대입하여 변경
+
+    ```c
+    struct book book2 = {"Alice in Wonderland", "Lewis Carroll", 20.3f};
+    book_to_read = book2;
+    ```
+
+  * 복합 리터럴 구조체로 변경
+
+    ```c
+    book_to_read = (struct book){"Alice in Wonderland", "Lewis Carroll", 20.3f};
+    ```
+
+* 함수에 구조체 입력
+
+  * 구조체 변수를 입력
+
+    ```c
+    struct rectangle rec1 = { 1.0, 2.0 };
+    double area = rect_area(rec1);
+    ```
+
+  * 복합 리터럴을 입력
+
+    ```c
+    area = rect_area((struct rectangle) {1.0, 2.0});
+    ```
+
+  * 복합 리터럴의 pointer 입력
+
+    ```c
+    area  = rect_area_ptr(&(struct rectangle) {.height = 3.0, .width = 2.0});
+    // Designated initializers
+    ```
+
+    * 복합 리터럴은 L-value 이기 때문에, pointer 가 존재
