--- a/C:C++/따배씨/14_구조체2.md
+++ b/C:C++/따배씨/14_구조체2.md
@@ -1494,3 +1494,211 @@ arrp10 arp;
 
 
 
+##### 14.15 qsort() 함수 포인터 연습문제
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int compare(const void* first, const void* second){
+    // void type pointer 는 어떤 타입이든 가리킬 수 있다
+    
+    if (*(int*)first > *(int*)second)
+        return 1;
+    else if (*(int*)first < *(int*)second)
+        return -1;
+    else
+        return 0;
+}
+
+int main(){
+    int arr[] = {8, 2, 5, 3, 6, 11};
+    int n = sizeof(arr) / sizeof(arr[0]);
+    
+    qsort(arr, n, sizeof(int), compare);
+    
+    for (int i = 0; i < n; i++)
+        printf("%d ", arr[i]);
+    
+
+    return 0;
+}
+```
+
+* quick sort 예제
+
+
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+struct kid
+{
+    char name[100];
+    int height;
+};
+
+int compare(const void* first, const void* second)
+{
+    if (((struct kid*)first)->height > ((struct kid*)second)->height)
+        return  1;
+    else if (((struct kid*)first)->height < ((struct kid*)second)->height)
+        return -1;
+    else
+        return 0;
+}
+
+int main()
+{
+    struct kid my_friends[] = {
+        "Jack Jack", 40, "Geenie", 300, "Aladin", 170, "Piona", 150
+    };
+    
+    const int n = sizeof(my_friends) / sizeof(struct kid);
+    
+    qsort(my_friends, n, sizeof(struct kid), compare);
+    
+    for (int i = 0; i < n; i++)
+    {
+        printf("%s  \t%d\n", my_friends[i].name, my_friends[i].height);
+    }
+    
+    return 0;
+}
+```
+
+* ````c
+  int compare(const void* first, const void* second)
+  {
+      if (((struct kid*)first)->height > ((struct kid*)second)->height)
+          return  1;
+      else if (((struct kid*)first)->height < ((struct kid*)second)->height)
+          return -1;
+      else
+          return 0;
+  }
+  ````
+
+  * 함수의 입력을 pointer 로 받아서 structure 의 내부 조건으로 정렬
+
+
+
+##### 4.26 함수 포인터의 배열 연습문제
+
+```c
+#include <stdio.h>
+#include <ctype.h>
+#include <stdlib.h>
+#include <stdbool.h>
+
+void update_string(char* str, int(*pf)(int));
+void ToUpper(char* str);
+void ToLower(char* str);
+void Transpose(char* str);
+
+int main()
+{
+    char options[] = {'u', 'l', 't'};
+    int n = sizeof(options) / sizeof(char);
+    
+    typedef void (*FUNC_TYPE)(char*);
+    FUNC_TYPE operations[] = {ToUpper, ToLower, Transpose};
+    
+    printf("Enter a string\n>> ");
+    
+    char input[100];
+    
+    while (scanf("%[^\n]%*c", input) != 1)
+        printf("Please try again.\n>> ");
+    
+    while (true)
+    {
+        printf("Choose an option:\n");
+        printf("u) to Upper\n");
+        printf("l) to Lower\n");
+        printf("t) to Transpose\n");
+        
+        char c;
+        while (scanf("%c%*[^\n]%*c", &c) != 1)
+            printf("Please try again.\n>> ");
+        
+        bool found = false;
+        
+        for (int i = 0; i < n; i++)
+        {
+            if (options[i] == c)
+            {
+                (*(operations[i]))(input);
+                found = true;
+                break;
+            }
+        }
+        
+        if (found)
+            break;
+        else
+            printf("Wrong input, try again\n");
+        
+    }
+    
+    printf("%s\n", input);
+    
+    return 0;
+}
+
+void update_string(char* str, int(*pf)(int))
+{
+    while (*str)
+    {
+        *str = (*pf)(*str);
+        str++;
+    }
+}
+
+
+void ToUpper(char* str)
+{
+    update_string(str, toupper);
+}
+
+void ToLower(char* str)
+{
+    update_string(str, tolower);
+}
+
+void Transpose(char* str)
+{
+    while (*str)
+    {
+        if (islower(*str))
+            * str = toupper(*str);
+        else if (isupper(*str))
+            *str = tolower(*str);
+        str++;
+    }
+}
+```
+
+* ```c
+  char options[] = {'u', 'l', 't'};
+  int n = sizeof(options) / sizeof(char);
+  
+  typedef void (*FUNC_TYPE)(char*);
+  FUNC_TYPE operations[] = {ToUpper, ToLower, Transpose};
+  
+  //////////////////
+  
+  for (int i = 0; i < n; i++)
+  {
+    if (options[i] == c)
+    {
+      (*(operations[i]))(input);
+      found = true;
+      break;
+    }
+  }
+  ```
+
+  * 함수 포인터의 배열을 활용하여, 메뉴 선택 구현
+  * 확장성 있는 코드 패턴
