210427|C따배씨 15강 start ~ 15.6 & 14강 정리 추가

--- a/C:C++/따배씨/14_구조체2.md
+++ b/C:C++/따배씨/14_구조체2.md
@@ -1702,3 +1702,12 @@ void Transpose(char* str)
 
   * 함수 포인터의 배열을 활용하여, 메뉴 선택 구현
   * 확장성 있는 코드 패턴
+
+* ```c
+  scanf("%c%*[^\n]%*c", &c)
+  ```
+
+  * % 뒤의 * 은 입력받고 무시한다는 의미
+  * '[]' 안의 문자가 아닌 문자를 만났을때 까지 입력 받음
+  * '[^]' 안의 문자를 만났을때 까지 입력 받음
+  * -> char 하나를 입력 받음 & \n 을 만날때까지 입력 받지만 무시 & 그뒤 입력 무시
