--- a/C:C++/따배씨/15_비트 다루기.md
+++ b/C:C++/따배씨/15_비트 다루기.md
@@ -426,3 +426,202 @@ void int_binary(const int num)
     printf("\n");
 }
 ```
+
+
+
+##### 15.7 비트단위 연산자의 다양한 사용법
+
+* 비트단위 연산자는 메모리와 CPU 를 잘 사용해야 하는 큰 프로그램을 작성할때 유용하게 사용 가능
+
+
+
+```c
+#include <stdio.h>
+#include <math.h>
+
+//                      shift     Decimal   Binary      Hex     Octet
+#define MASK_SWORD      (1<<0) // 2^0       00000001    0X01    01
+#define MASK_SHIELD     (1<<1) // 2^1       00000010    0X02    02
+#define MASK_POTION     (1<<2) // 2^2       00000100    0X04    04
+#define MASK_GUNTLET    (1<<3) // 2^3       00001000    0X08    010
+#define MASK_HAMMER     (1<<4) // 2^4       00010000    0X10    020
+#define MASK_KEY        (1<<5) // 2^5       00100000    0X20    040
+#define MASK_RING       (1<<6) // 2^6       01000000    0X40    0100
+#define MASK_AMULET     (1<<7) // 2^7       10000000    0X80    0200
+
+void char_binary(const char num);
+void int_binary(const int num);
+
+/*
+    flag            01011010
+    mask            00000011
+    mask & flag =   00000010
+ */
+
+int main()
+{
+    /*
+        bool has_sword = false;
+        bool has_shield = false;
+        bool has_potion = false;
+        bool has_guntlet = false;
+        bool has_hammel = false;
+        bool has_key = false;
+        bool has_ring = false;
+        bool has_amulet = false;
+     */
+    
+    char flags = 0; // MASK flags
+    char_binary(flags);
+    // Decimal   0     == Bianry 00000000
+    
+    printf("\nTurning Bits On (Setting Bits)\n");
+    flags = flags | MASK_SWORD; // flag != MASK_SWORD;
+    char_binary(flags);
+    // Decimal   1     == Bianry 00000001
+    flags |= MASK_AMULET;
+    char_binary(flags);
+    // Decimal -127     == Bianry 10000001
+    
+    printf("\nTurning Biys Off (Clearning Bits)\n");
+    flags = flags | MASK_POTION;
+    char_binary(flags);
+    // Decimal -123     == Bianry 10000101
+    flags = flags & ~MASK_POTION;   // flags &= ~MASK_POTION;
+    char_binary(flags);
+    // Decimal -127     == Bianry 10000001
+    
+    
+    printf("\nToggling Bits\n");
+    flags = flags ^ MASK_HAMMER;
+    char_binary(flags);
+    // Decimal -111     == Bianry 10010001
+    flags = flags ^ MASK_HAMMER;
+    char_binary(flags);
+    // Decimal -127     == Bianry 10000001
+    flags = flags ^ MASK_HAMMER;
+    char_binary(flags);
+    // Decimal -111     == Bianry 10010001
+    
+    printf("\nChecking the Value of a Bit\n");
+    if ((flags & MASK_KEY) == MASK_KEY)
+        printf(">> You can enter.\n");
+    else
+        printf(">> You can not enter.\n");
+    // >> You can not enter.
+    
+    flags |= MASK_KEY;
+    
+    if ((flags & MASK_KEY) == MASK_KEY)
+        printf(">> You can enter.\n");
+    else
+        printf(">> You can not enter.\n");
+    // >> You can enter.
+    
+    printf("\nTrimming\n");
+    int int_flag = 0xffffffff;
+    // 11111111111111111111111111111111
+    int_binary(int_flag);
+    // Decimal  -1     == Bianry 11111111111111111111111111111111
+    int_flag &= 0xff;
+    // Trim by 11111111
+    int_binary(int_flag);
+    // Decimal 255     == Bianry 00000000000000000000000011111111
+    
+    return 0;
+}
+
+void int_binary(const int num)
+{
+    printf("Decimal %3d \t== Bianry ", num);
+    
+    const size_t bits = sizeof(num) * 8;
+    
+    for (size_t i = 0; i < bits; i++)
+    {
+        const int mask = 1 << (bits - 1 - i);
+        // bit 연산자를 이용하여 mask 를 만듬, 더 효율적
+        
+        if ((num & mask) == mask)
+            printf("%d", 1);
+        else
+            printf("%d", 0);
+    }
+    printf("\n");
+}
+
+void char_binary(const char num)
+{
+    printf("Decimal %3d \t== Bianry ", num);
+    
+    const size_t bits = sizeof(num) * 8;
+    
+    for (size_t i = 0; i < bits; i++)
+    {
+        const int mask = 1 << (bits - 1 - i);
+        // bit 연산자를 이용하여 mask 를 만듬, 더 효율적
+        
+        if ((num & mask) == mask)
+            printf("%d", 1);
+        else
+            printf("%d", 0);
+    }
+    printf("\n");
+}
+```
+
+* mask 는 보고싶은 (확인 하고 싶은 부분) 만 보기위한 선언
+
+  ```c
+  flag = 01011010;
+  mask = 00000011;
+  // mask & flag =   00000010;
+  ```
+  * flag 는 현재 상태, mask 는 확인하고 싶은 데이터
+  * & 비트 연산을 통해 확인하고 싶은 부분의 데이터 확인 가능
+
+
+
+##### 15.8 RGBA 색상 비트 마스크 연습문제
+
+* 컴퓨터에서 색을 표현하는 방법 중 하나
+
+```c
+#include <stdio.h>
+
+#define BYTE_MASK 0xff  // 0xff - 8비트로 표현가능한 16진수 중 가장 큰 수 == 11111111
+void int_binary(const int num);
+int main()
+{
+    unsigned int rgba_color = 0x66CDAAFF;
+    // 4 bytes, medium aqua marine (102, 205, 170, 255) , unsigned char type
+    
+    unsigned char red, green, blue, alpha;
+    
+    // Use right shifg >> operator
+    red     = (rgba_color >> 24 & BYTE_MASK);
+	  green   = (rgba_color >> 16 & BYTE_MASK);
+  	blue    = (rgba_color >> 8 & BYTE_MASK);
+    alpha   = rgba_color & BYTE_MASK;
+    
+    
+
+    
+    printf("(R, G, B, A) = (%hhu, %hhu, %hhu, %hhu)\n", red, green, blue, alpha);
+    // (R, G, B, A) = (102, 205, 170, 255)
+    
+    return 0;
+}
+```
+
+* ```c
+  unsigned int rgba_color = 0x66CDAAFF;
+  ```
+
+  * Bianry : 01100110  11001101  10101010  11111111
+    * red : 01100110 == 102
+    * green : 11001101 == 205
+    * blue : 10101010 == 170
+    * alpha : 11111111 == 255
+  * 4byte 를 1byte(8bits) 씩 R, G, B, A 를 표현 / 각 색상당 0~255 까지 표현가능
+
