--- a/C:C++/따배씨/15_비트 다루기.md
+++ b/C:C++/따배씨/15_비트 다루기.md
@@ -625,3 +625,166 @@ int main()
     * alpha : 11111111 == 255
   * 4byte 를 1byte(8bits) 씩 R, G, B, A 를 표현 / 각 색상당 0~255 까지 표현가능
 
+
+
+##### 15.9 구조체 안의 비트필드 Bit-Fields
+
+* Bit-Fields : 비트가 연속적으로 나열되어 있는 형태
+
+  * C 언어에서는 구조체를 사용
+
+  ![15_9_1_비트필드예시](./imgs/15_9_1.png)
+  * ' : ' 뒤의 숫자는 몇 bit 를 사용 할지를 선언하는 방법 
+  * Bit-Fields 와 Bit-Masking 은 혼용되어 사용됨
+
+
+
+##### 15.10 비트필드 Bit-Fields 의 사용방법
+
+```c
+#include <stdio.h>
+#include <limits.h>
+#include <stdbool.h>
+
+void char_to_binary(unsigned char uc)
+{
+    const int bits = CHAR_BIT * sizeof(unsigned char);
+    
+    for (int i = bits - 1; i >= 0; i--)
+    {
+        printf("%d", (uc >> i & 1));
+    }
+}
+
+void print_binary(char* data, int bytes)
+{
+    for (int i = 0; i < bytes; i++)
+    {
+        char_to_binary(data[i]);
+    }
+    printf("\n");
+}
+
+int main()
+{
+    struct items {
+        bool has_sword      : 1;    // : number means bits to use!
+        bool has_shield     : 1;    // 1bit 크기의 bool type
+        bool has_potion     : 1;
+        bool has_guntlet    : 1;
+        bool has_hammer     : 1;
+        bool has_key        : 1;
+        bool has_ring       : 1;
+        bool has_amulet     : 1;
+    } items_flag;
+    
+    items_flag.has_sword    = 1;    // flags = flags | MASK_SWORD;
+    items_flag.has_shield   = 1;
+    items_flag.has_potion   = 0;
+    items_flag.has_guntlet  = 1;
+    items_flag.has_hammer   = 0;
+    items_flag.has_key      = 1;
+    items_flag.has_ring     = 1;
+    items_flag.has_amulet   = 1;
+    
+    printf("Size = %zd\n", sizeof(items_flag));
+    // Size = 1
+    
+    print_binary((char *)&items_flag, sizeof(items_flag));
+    // 11001011
+    
+    if (items_flag.has_key == 1)
+        printf(">> You can enter.\n");
+        // >> You can enter.
+    
+    
+    
+    union{
+        struct items bf;
+        unsigned char uc;
+    } uni_flag;
+    
+    uni_flag.uc = 0;
+    uni_flag.bf.has_amulet = true;
+    uni_flag.uc |= (1 << 5);
+    print_binary((char*)&uni_flag, sizeof(uni_flag));
+    // 10100000
+    
+    uni_flag.bf.has_key = false;
+    print_binary((char*)&uni_flag, sizeof(uni_flag));
+    // 10000000
+    
+    return  0;
+}
+```
+
+* structure 를 이용하여 bit-fields 로 사용
+
+  * union 을 이용하여 초기화를 쉽게 함
+
+    ```c
+    union{
+      struct items bf;
+      unsigned char uc;
+    } uni_flag;
+    
+    uni_flag.uc = 0;
+    ```
+
+
+
+```c
+#include <stdio.h>
+#include <limits.h>
+#include <stdbool.h>
+
+int main()
+{
+    struct file_time {
+        unsigned int seconds    : 5;   // 2^5 = 32, 0 ~ 30*2 seconds
+        unsigned int minutes    : 6;   // 2^6 = 64, 0 ~ 60 minutes
+        unsigned int hours      : 5;   // 2^5 = 32, 0 ~ 23 hours
+    };
+    
+    struct file_date {
+        unsigned int day        : 5;   // 2^5 = 32, 1 ~ 31 day
+        unsigned int month      : 4;   // 2^4 = 16, 1 ~ 12 month
+        unsigned int year       : 7;   // 2^7 = 128, 1980 ~ years
+    } fd;
+    
+    /* 1988 12 28 */
+    fd.day = 28;
+    fd.month = 12;
+    fd.year = 8;
+    
+    printf("Day %u, Month %u Year %u,\n", fd.day, fd.month, fd.year);
+    
+    // scanf("%d", &fd.day);    /* Warning */
+    return  0;
+}
+
+```
+
+* 파일이 생성 될때, 시간 / 날짜를 Bits-Fields 를 이용하여 최적화 표기 가능
+
+  * ```c
+    struct file_time {
+            unsigned int seconds    : 5;   // 2^5 = 32, 0 ~ 30*2 seconds
+            unsigned int minutes    : 6;   // 2^6 = 64, 0 ~ 60 minutes
+            unsigned int hours      : 5;   // 2^5 = 32, 0 ~ 23 hours
+        };
+    ```
+
+  * ```c
+    struct file_date {
+            unsigned int day        : 5;   // 2^5 = 32, 1 ~ 31 day
+            unsigned int month      : 4;   // 2^4 = 16, 1 ~ 12 month
+            unsigned int year       : 7;   // 2^7 = 128, 1980 ~ years
+        };
+    ```
+
+* ```c
+  // scanf("%d", &fd.day);    /* WRONG */
+  ```
+  * Bits-Fields 는 bit 단위로 메모리를 사용하기 때문에, 주소의 최소 단위인 1Byte 의 연산이 불가능 함
+    * scanf 는 입력 값이 저장될 공간 위치를 주소값으로 지정
