--- a/php/생활코딩 php 강좌/03_숫자와 문자.md
+++ b/php/생활코딩 php 강좌/03_숫자와 문자.md
@@ -29,13 +29,9 @@ echo 6-4;
 <?php
 var_dump(4);
 ?>
+  
+// 1 2 4 2 int(4)
 ```
-
-* 출력
-
-  * ```html
-    1 2 4 2 int(4)
-    ```
 
 * var_dump();
 
@@ -78,13 +74,11 @@ var_dump(4);
 echo var_dump(1234);
 echo var_dump("1234");
 ?>
+  
+// int(1234) string(4) "1234"
 ```
 
 * 출력
-
-  * ```html
-    int(1234) string(4) "1234"
-    ```
 
   * echo var_dump(1234) : ineger type 1234
 
