--- a/php/생활코딩 php 강좌/06_조건문.md
+++ b/php/생활코딩 php 강좌/06_조건문.md
@@ -313,7 +313,7 @@ if (!false and !false){
 
 
 
-##### 6. 4 boolean 과 형변환
+##### 6.4 boolean 과 형변환
 
 * 형변환 : php 는 상황에 따라 자동으로 data type 을 변환해 주는 특성이 있음
 * [php 형변환 table 링크](https://www.php.net/manual/en/types.comparisons.php)
