--- a/C:C++/따배씨/04_문자열과 형식 맞춘 입출력.md
+++ b/C:C++/따배씨/04_문자열과 형식 맞춘 입출력.md
@@ -352,7 +352,7 @@ int main()
 
 ##### 4.5 기호적 상수와 전처리기
 
-* 반속해서 상수를 기호적 상수로 처리하여 실수를 줄일수 있음
+* 반복해서 상수를 기호적 상수로 처리하여 실수를 줄일수 있음
 
   * ```c
     #define PI 3.141592f
@@ -586,7 +586,7 @@ we owe this to everyone who's not in this room to try.\n");
   * '.number' : 숫자만큼의 자리수를 출력하여 정밀도를 보장, 부족한 자리수는 0으로 출력
   * ' .* ' : * 에 해당하는 숫자를 입력받아 처리
 
-* lenght
+* length
 
   ![4_8_4_length](./imgs/4_8_4.png)
   * 정수(float) 출력시 내부적으로 double로 처리 됨
@@ -672,7 +672,6 @@ int main()
 ```c
 printf("%d %d %d\n\n", n1, n2, n3);	// 4, 4, 4 (N, N, N)
 // 16106123736 1074339512 -922712936
-
 ```
 
 * 4 4 4 로 할당한 공간에 8 8 4 가 입력되어 메모리 공간에 밀려 저장되어서 정상 출력 X
@@ -750,7 +749,6 @@ int main()
     
     return 0;
 }
-
 ```
 
 * 공백도 문자로 처리
