210520|php 생활코딩 14 생활코딩 php 14 데이터베이스
이전 강의 내용 수정
- php/생활코딩 php 강좌/13_php와정규표현식.md
- c:c++/따배씨/06_반복문.md

--- a/C:C++/따배씨/06_반복문.md
+++ b/C:C++/따배씨/06_반복문.md
@@ -129,8 +129,8 @@ int main(){
   *  <    is less than
   * <=   is less than or equal to
   * ==   is equal to
-  * \>=   is grater than or equal to
-  *  \>    is gratr than
+  * \>=   is greater than or equal to
+  *  \>    is greater than
   * !=   is not equal to
 
 
