210607|따배씨 오타수정

--- a/C:C++/따배씨/10_배열과 포인터.md
+++ b/C:C++/따배씨/10_배열과 포인터.md
@@ -950,7 +950,7 @@ int main(){
 
 
 
-##### 10.15 포인터의 호환성 Compoatibility
+##### 10.15 포인터의 호환성 Compotaibility
 
 * 문법적으로 가능하지만, 사용상 권장하지 않는 내용이 많이 포함됨
 
