210622|패캠 node 올인원 01.07 ~ 01.08
01.javascript
  07_조건문
  08_콜백함수 및 클로저

--- a/C:C++/따배씨/14_구조체1.md
+++ b/C:C++/따배씨/14_구조체1.md
@@ -2,7 +2,7 @@
 
 ### 14강 구조체_1
 
-14.1 구조체 Structures 가 필요한 이유
+##### 14.1 구조체 Structures 가 필요한 이유
 
 * 많은 데이터를 처리 하기 위히여 사용
   * 자료형이 다르지만 함께 사용하면 편리한 데이터 오브젝트끼리 모아둔 것
