210729|패캠 node 올인원 03.12
03.express
  12.express 권장구조

--- a/C:C++/따배씨/15_비트 다루기.md
+++ b/C:C++/따배씨/15_비트 다루기.md
@@ -791,7 +791,7 @@ int main()
 
 
 
-##### 15.11 피트필드 Bits-Fields 의 패딩 Padding
+##### 15.11 비트필드 Bits-Fields 의 패딩 Padding
 
 ```c
 #include <stdio.h>
