210816|패캠 Node 올인원 04_정리

--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/10_DB 삭제.md
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/04_sepuelize/10_DB 삭제.md
@@ -142,7 +142,9 @@ exports.get_products_delete = (req, res) => {
   {% endfor %}
 </table>
 
-<a href="/admin/products/write" class="btn btn-default">작성하기</a>
+<a href="/admin/products/write" class="btn btn-default">
+  작성하기
+</a>
 {% endblock %}
 ```
 
