--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/07_GraphQL/04_데이터 쓰기.md
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/07_GraphQL/04_데이터 쓰기.md
@@ -1,3 +1,12 @@
+# 패스트캠퍼스 - Node 웹 프로그래밍 올인원 패키지
+
+### 07.GraphQL
+
+##### 04_데이터 쓰기
+
+```javascript
+// ./index.js
+
 const express = require("express");
 const { graphqlHTTP } = require("express-graphql");
 const { buildSchema } = require("graphql");
@@ -63,3 +72,29 @@ app.use(
 app.listen(4000, () => {
   console.log("runnsing server port 4000");
 });
+```
+
+
+
+```
+type Mutation{
+    addProduct( input: ProductInput ) : Product
+	}
+```
+
+* input Mutation
+  * Mutation: GraphQL 의 데이터 작성 요청은 mutation 을 통해 보내지는것이 관습
+
+
+
+```javascript
+const root = {
+  addProduct: ({ input }) => {
+    input.id = parseInt(products.length + 1);
+    products.push(input);
+    return root.getProduct({ id: input.id });
+  },
+};
+```
+
+* addProduct controller
