--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/07_GraphQL/05_데이터 수정:삭제.md
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/07_GraphQL/05_데이터 수정:삭제.md
@@ -1,3 +1,10 @@
+# 패스트캠퍼스 - Node 웹 프로그래밍 올인원 패키지
+
+### 07.GraphQL
+
+##### 05_데이터 수정/삭제
+
+```javascript
 const express = require("express");
 const { graphqlHTTP } = require("express-graphql");
 const { buildSchema } = require("graphql");
@@ -78,3 +85,65 @@ app.use(
 app.listen(4000, () => {
   console.log("runnsing server port 4000");
 });
+
+```
+
+
+
+```
+type Mutation{
+		updateProduct( id: ID!, input: ProductInput! ) : Product
+		deleteProduct( id: ID! ) : String
+	}
+```
+
+* 수정: updateProduct
+* 삭제: deleteProduct
+* input Mutation
+  * Mutation: GraphQL 의 데이터 작성 요청은 mutation 을 통해 보내지는것이 관습
+
+
+
+```javascript
+const root = {
+  updateProduct: ({ id, input }) => {
+    const index = products.findIndex((product) => product.id === parseInt(id));
+    products[index] = {
+      id: parseInt(id),
+      ...input,
+    };
+    return products[index];
+  },
+  deleteProduct: ({ id }) => {
+    const index = products.findIndex((product) => product.id === parseInt(id));
+    products.slice(index, 1);
+    return "remove success";
+  },
+};
+
+
+```
+
+* updateProduct 함수 정의
+* deleteProduct 함수 정의
+
+
+
+```json
+// 수정하기 query
+{
+    "query": "mutation updateProduct( $id : ID! , $input: ProductInput! ) { updateProduct( id : $id  , input: $input) { id } }",
+    "variables": { "id" : 1 ,"input" : { "name" : "수정상품" , "price" : 1000 , "description" : "후후후" } }
+}
+```
+
+
+
+```json
+// 삭제하기 query
+{
+    "query": "mutation deleteProduct( $id : ID! ) { deleteProduct( id : $id  )  }",
+    "variables": { "id" : 1  }
+}
+```
+
