--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/07_GraphQL/04_데이터 쓰기.md
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/07_GraphQL/04_데이터 쓰기.md
@@ -98,3 +98,16 @@ const root = {
 ```
 
 * addProduct controller
+
+
+
+
+
+```json
+// 데이터 입력 query
+{
+    "query": "mutation addProduct($input: ProductInput) { addProduct(input: $input) { id } }",
+    "variables": { "input" : { "name" : "세번째상품" , "price" : 3000 , "description" : "후후후" } }
+}
+```
+
