--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/07_GraphQL/06_클라이언트 사용하기.md
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/07_GraphQL/06_클라이언트 사용하기.md
@@ -1,3 +1,10 @@
+# 패스트캠퍼스 - Node 웹 프로그래밍 올인원 패키지
+
+### 07.GraphQL
+
+##### 06_클라이언트 사용하기
+
+```javascript
 const express = require("express");
 const { graphqlHTTP } = require("express-graphql");
 const { buildSchema } = require("graphql");
@@ -83,3 +90,48 @@ app.use("/static", express.static("static"));
 app.listen(4000, () => {
   console.log("runnsing server port 4000");
 });
+
+```
+
+
+
+```html
+<!-- ./static/index.html -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    graphQL example
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+    <script>
+      // read query
+      axios
+        .get("http://localhost:4000/graphql", {
+          params: {
+            query: "{ getProduct(id :1){name price} }",
+          },
+        })
+        .then((res) => {
+          console.log(res);
+        });
+
+      // create query
+      axios.post( "http://localhost:4000/graphql",{
+              "query": "mutation addProduct($input: ProductInput) { addProduct(input: $input) { id } }",
+              "variables": { "input" : { "name" : "세번째상품" , "price" : 3000 , "description" : "후후후" } },
+              "operationName": null
+
+        }).then(function(res){
+          console.log(res);
+        })
+    </script>
+  </body>
+</html>
+
+```
+
